Fix spacing on footer

--- a/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
@@ -1,6 +1,5 @@
 .wp-block-group.global-footer {
 	padding: 44px var(--wp--custom--alignment--edge-spacing);
-	font-size: 13px;
 
 	@media (--tablet) {
 		padding-top: 69px;
